fix(css): enforce no margin on DocSearch form

--- a/packages/docsearch-css/src/modal.css
+++ b/packages/docsearch-css/src/modal.css
@@ -64,6 +64,7 @@
   box-shadow: var(--docsearch-searchbox-shadow);
   display: flex;
   height: var(--docsearch-searchbox-height);
+  margin: 0;
   padding: 0 var(--docsearch-spacing);
   position: relative;
   width: 100%;
