--- a/packages/docsearch-css/src/button.css
+++ b/packages/docsearch-css/src/button.css
@@ -6,6 +6,7 @@
   color: var(--docsearch-muted-color);
   cursor: pointer;
   display: flex;
+  font-weight: 500;
   height: 36px;
   justify-content: space-between;
   margin: 0 0 0 16px;
