--- a/packages/docsearch-css/src/button.css
+++ b/packages/docsearch-css/src/button.css
@@ -12,6 +12,7 @@
   margin: 0 0 0 16px;
   padding: 0 8px;
   user-select: none;
+  width: 155px;
 }
 
 .DocSearch-Button:hover,
@@ -62,6 +63,10 @@
 }
 
 @media (max-width: 750px) {
+  .DocSearch-Button {
+    width: auto;
+  }
+
   .DocSearch-Button-KeySeparator,
   .DocSearch-Button-Key {
     display: none;
