--- a/packages/docsearch-css/src/button.css
+++ b/packages/docsearch-css/src/button.css
@@ -43,7 +43,7 @@
 
 .DocSearch-Button-Keys {
   display: flex;
-  width: calc(2 * 20px + 2 * 0.4em);
+  min-width: calc(2 * 20px + 2 * 0.4em);
 }
 
 .DocSearch-Button-Key {
@@ -64,7 +64,6 @@
 
 @media (max-width: 750px) {
   .DocSearch-Button-Keys,
-  .DocSearch-Button-Key,
   .DocSearch-Button-Placeholder {
     display: none;
   }
