--- a/packages/website/src/css/custom.css
+++ b/packages/website/src/css/custom.css
@@ -1,4 +1,5 @@
 @import url(fragments.css);
+@import 'tailwindcss/tailwind.css';
 
 :root {
   --ifm-font-size-base: 16px;
@@ -43,6 +44,30 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
   z-index: 10;
 }
 
+.showcase {
+  background-color: #fff;
+}
+
+html[data-theme='dark'] .showcase {
+  background-color: #21243d;
+}
+
+.showcase-border {
+  border-color: rgba(243, 244, 246, 1);
+}
+
+html[data-theme='dark'] .showcase-border {
+  border-color: rgba(55, 65, 81, 1);
+}
+
+.text-description {
+  color: rgba(107, 114, 128, 1);
+}
+
+html[data-theme='dark'] .text-description {
+  color: rgba(209, 213, 219, 1);
+}
+
 /* apply */
 #hero-apply {
   z-index: -1;
@@ -61,6 +86,26 @@ html[data-theme='dark'] #hero-apply {
 
 html[data-theme='dark'] #hero-apply > div:first-child {
   opacity: 0.4;
+}
+
+.apply-form {
+  background-image: linear-gradient(#fff, #f5f5fa);
+}
+
+html[data-theme='dark'] .apply-form {
+  background-image: radial-gradient(
+    circle at 50% 0px,
+    rgb(72, 76, 122),
+    rgb(35, 38, 59)
+  );
+}
+
+.apply-text {
+  color: #36395a;
+}
+
+html[data-theme='dark'] .apply-text {
+  color: #fff;
 }
 
 /* index */
@@ -111,10 +156,6 @@ html[data-theme='dark'] .header-github-link:before {
 
 /* Tailwindcss */
 
-#tailwind .showcase {
-  background-color: #21243d;
-}
-
 #tailwind dd,
 #tailwind dt {
   margin: 0;
@@ -125,7 +166,6 @@ html[data-theme='dark'] .header-github-link:before {
 #tailwind ::after {
   border-width: 0;
   border-style: solid;
-  border-color: theme('borderColor.default', currentColor);
 }
 
 #tailwind ol,
