--- a/packages/docsearch-css/src/modal.css
+++ b/packages/docsearch-css/src/modal.css
@@ -549,7 +549,9 @@ svg.DocSearch-Hit-Select-Icon {
   height: 18px;
   justify-content: center;
   margin-right: 0.4em;
-  padding-bottom: 1px;
+  padding: 0px 0px 1px 0px;
+  color: var(--docsearch-muted-color);
+  border: 0px;
   width: 20px;
 }
 
