feat(css): make breakpoint customizable
Signed-off-by: Takuya Noguchi <takninnovationresearch@gmail.com>

--- a/packages/docsearch-css/src/modal.css
+++ b/packages/docsearch-css/src/modal.css
@@ -556,7 +556,7 @@ svg.DocSearch-Hit-Select-Icon {
 }
 
 /* Responsive */
-@media (max-width: 750px) {
+@media (max-width: var(--docsearch-breakpoint)) {
   :root {
     --docsearch-spacing: 10px;
     --docsearch-footer-height: 40px;
