--- a/packages/docsearch-css/src/_variables.css
+++ b/packages/docsearch-css/src/_variables.css
@@ -44,6 +44,9 @@
   --docsearch-footer-background: #fff;
   --docsearch-footer-shadow: 0 -1px 0 0 rgb(224, 227, 232),
     0 -3px 6px 0 rgba(69, 98, 155, 0.12);
+
+  /* breakpoints */
+  --docsearch-breakpoint: 750px;
 }
 
 /* Darkmode */
