--- a/packages/docsearch-css/src/button.css
+++ b/packages/docsearch-css/src/button.css
@@ -63,7 +63,7 @@
   width: 20px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: var(--docsearch-breakpoint)) {
   .DocSearch-Button-Keys,
   .DocSearch-Button-Placeholder {
     display: none;
