fix: arrow keys behavior in modal

--- a/packages/docsearch-css/src/modal.css
+++ b/packages/docsearch-css/src/modal.css
@@ -263,6 +263,7 @@
 }
 
 .DocSearch-Hit {
+  scroll-margin-top: 40px;
   border-radius: 4px;
   display: flex;
   padding-bottom: 4px;
@@ -305,6 +306,10 @@
 .DocSearch-Hit-source {
   background: var(--docsearch-modal-background);
   color: var(--docsearch-highlight-color);
+  height: var(--docsearch-modal-source-height);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   font-size: 0.85em;
   font-weight: 600;
   line-height: 32px;
